--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 /* ABOUT  */
 #about {
-  background-image: url("/img/banner_2.jpg");
+  background-image: url("../img/banner_2.jpg");
   background-size: cover;
   background-position: center;
   color: #fff;
